# fluffys-sdl-adventure

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: readmemalloc.cpp  triangle.cpp  wireframe.cpp
src/lib/: drawprimitives.cpp  drawprimitives.hpp  fluffymath.cpp  fluffymath.hpp  memcheck.cpp  splines.cpp  splines.hpp  triangle2d.cpp  triangle2d.hpp
tests/: test1.cpp
